Update 'dotnet-basic-jcqrgunj' component image to: quay.io/sjmrhtap/dotnet-basic-jcqrgunj:b97e4d4e8dd988ab5c62b3b6d9e6d6db9c409834@sha256:fc78b8b201bad8ff13bf8d9daffa083f6d6c1059b6df332830ed9737f1e24657

--- a/components/dotnet-basic-jcqrgunj/overlays/development/deployment-patch.yaml
+++ b/components/dotnet-basic-jcqrgunj/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: dotnet-basic-jcqrgunj
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-tssc/task-runner:1.7
-        name: container-image  
+        - image: quay.io/sjmrhtap/dotnet-basic-jcqrgunj:b97e4d4e8dd988ab5c62b3b6d9e6d6db9c409834@sha256:fc78b8b201bad8ff13bf8d9daffa083f6d6c1059b6df332830ed9737f1e24657
+          name: container-image
