--- a/components/dotnet-basic-jcqrgunj/overlays/stage/deployment-patch.yaml
+++ b/components/dotnet-basic-jcqrgunj/overlays/stage/deployment-patch.yaml
@@ -12,5 +12,5 @@ spec:
   template: 
     spec:
       containers:
-      - image: quay.io/redhat-tssc/task-runner:1.7
+      - image: quay.io/sjmrhtap/dotnet-basic-jcqrgunj:b97e4d4e8dd988ab5c62b3b6d9e6d6db9c409834@sha256:fc78b8b201bad8ff13bf8d9daffa083f6d6c1059b6df332830ed9737f1e24657
         name: container-image  
